[gd_scene load_steps=38 format=3 uid="uid://hva1em7ponql"]

[ext_resource type="Script" path="res://World_Generation/level_builder/Level_Builder.gd" id="1_18iqu"]
[ext_resource type="Shader" path="res://World_Generation/New_Terrain.gdshader" id="2_jxrs8"]
[ext_resource type="Script" path="res://World_Generation/level_builder/Level_Builder_UIUI.gd" id="2_l4oru"]
[ext_resource type="Script" path="res://World_Generation/level_builder/brush.gd" id="2_vq7n1"]
[ext_resource type="Script" path="res://World_Generation/level_builder/chunk_editor.gd" id="3_x81um"]
[ext_resource type="Shader" path="res://World_Generation/Water.gdshader" id="4_76ggg"]
[ext_resource type="Script" path="res://World_Generation/level_builder/Editor_Cam_controller.gd" id="6_f37vi"]

[sub_resource type="Gradient" id="Gradient_c7l3w"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.5, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5lyek"]
gradient = SubResource("Gradient_c7l3w")
width = 500
height = 500
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="Gradient" id="Gradient_8qlg3"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.5, 1)
colors = PackedColorArray(1, 1, 1, 0.0470588, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_abga6"]
gradient = SubResource("Gradient_8qlg3")
width = 500
height = 500
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="Environment" id="Environment_xl1fn"]
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(0.996078, 0.996078, 0.996078, 1)

[sub_resource type="Environment" id="Environment_ohbwb"]

[sub_resource type="Gradient" id="Gradient_1g27v"]
interpolation_mode = 2
colors = PackedColorArray(0.442911, 0.442911, 0.442909, 1, 0.929412, 0.945098, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_dlv7m"]
noise_type = 4
frequency = 0.015
fractal_type = 2
fractal_octaves = 3
fractal_lacunarity = 2.416
fractal_gain = 0.239
fractal_weighted_strength = 1.0
fractal_ping_pong_strength = 2.037
domain_warp_enabled = true
domain_warp_amplitude = 30.168
domain_warp_frequency = 0.032
domain_warp_fractal_octaves = 1
domain_warp_fractal_lacunarity = 6.086

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_auk8h"]
width = 1000
height = 1000
seamless = true
color_ramp = SubResource("Gradient_1g27v")
noise = SubResource("FastNoiseLite_dlv7m")

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ee0of"]
width = 1000
height = 1000
seamless = true
as_normal_map = true
bump_strength = 10.8
noise = SubResource("FastNoiseLite_dlv7m")

[sub_resource type="Gradient" id="Gradient_im8lq"]
colors = PackedColorArray(0, 0.260467, 0, 1, 0.305169, 0.557647, 0.256383, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_al3lm"]
noise_type = 0
frequency = 0.018
fractal_octaves = 10
fractal_lacunarity = 2.123
fractal_gain = 0.874
domain_warp_enabled = true
domain_warp_amplitude = 30.164
domain_warp_frequency = -0.03
domain_warp_fractal_type = 2
domain_warp_fractal_lacunarity = 6.062
domain_warp_fractal_gain = 0.971

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_su8x1"]
width = 1000
height = 1000
seamless = true
color_ramp = SubResource("Gradient_im8lq")
noise = SubResource("FastNoiseLite_al3lm")

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_lrj8h"]
width = 1000
height = 1000
invert = true
seamless = true
as_normal_map = true
bump_strength = 3.5
noise = SubResource("FastNoiseLite_al3lm")

[sub_resource type="Gradient" id="Gradient_2i80b"]
colors = PackedColorArray(0.859586, 0.873469, 0.643777, 1, 0.550264, 0.542165, 0.456681, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_l7c1p"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xuw1p"]
width = 1000
height = 1000
seamless = true
color_ramp = SubResource("Gradient_2i80b")
noise = SubResource("FastNoiseLite_l7c1p")

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8e7yg"]
width = 1000
height = 1000
seamless = true
as_normal_map = true
normalize = false
color_ramp = SubResource("Gradient_2i80b")
noise = SubResource("FastNoiseLite_l7c1p")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rie7d"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_jxrs8")
shader_parameter/t_height = 100.0
shader_parameter/universal_tex_scaling = 10.972
shader_parameter/min_rock_slope = 0.156
shader_parameter/max_grass_slope = 0.362
shader_parameter/grass_alb_tex = SubResource("NoiseTexture2D_su8x1")
shader_parameter/grass_norm_tex = SubResource("NoiseTexture2D_lrj8h")
shader_parameter/cliff_alb_tex = SubResource("NoiseTexture2D_auk8h")
shader_parameter/cliff_norm_tex = SubResource("NoiseTexture2D_ee0of")
shader_parameter/sand_alb_tex = SubResource("NoiseTexture2D_xuw1p")
shader_parameter/sand_norm_tex = SubResource("NoiseTexture2D_8e7yg")

[sub_resource type="PlaneMesh" id="PlaneMesh_rgect"]
material = SubResource("ShaderMaterial_rie7d")
size = Vector2(500, 500)
subdivide_width = 400
subdivide_depth = 400

[sub_resource type="Gradient" id="Gradient_kcurd"]
interpolation_mode = 2
colors = PackedColorArray(0.383293, 0.763558, 1, 1, 1.20327e-06, 0.337756, 0.401284, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7aoj2"]
gradient = SubResource("Gradient_kcurd")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rkjtp"]
noise_type = 3
fractal_type = 2
fractal_octaves = 4
fractal_lacunarity = 2.142
fractal_gain = 1.916
fractal_weighted_strength = 1.0
fractal_ping_pong_strength = 7.072

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rv5b1"]
width = 1000
height = 1000
seamless = true
seamless_blend_skirt = 0.596
as_normal_map = true
noise = SubResource("FastNoiseLite_rkjtp")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5bdcn"]
noise_type = 3
seed = 3
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_57abc"]
width = 1000
height = 1000
seamless = true
as_normal_map = true
bump_strength = 12.9
noise = SubResource("FastNoiseLite_5bdcn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1nm3f"]
render_priority = 0
shader = ExtResource("4_76ggg")
shader_parameter/t_height = 100.0
shader_parameter/fresnel_intensity = null
shader_parameter/tide = 2.871
shader_parameter/water_turbulence = 6.652
shader_parameter/water_alb = Color(0.392157, 0.831373, 0.898039, 1)
shader_parameter/wave_direction_1 = Vector2(2, -2)
shader_parameter/wave_direction_2 = Vector2(-2, 2)
shader_parameter/time_scale = 0.01
shader_parameter/wtr_tex_size = Vector2(1000, 1000)
shader_parameter/water_alb_tex = SubResource("GradientTexture1D_7aoj2")
shader_parameter/water_disp_tex_1 = SubResource("NoiseTexture2D_rv5b1")
shader_parameter/water_disp_tex_2 = SubResource("NoiseTexture2D_57abc")

[sub_resource type="PlaneMesh" id="PlaneMesh_djt1j"]
material = SubResource("ShaderMaterial_1nm3f")
size = Vector2(500, 500)
subdivide_width = 200
subdivide_depth = 200

[sub_resource type="HeightMapShape3D" id="HeightMapShape3D_87c6a"]
map_width = 52
map_depth = 52
map_data = PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="Environment" id="Environment_h4cl6"]

[node name="Level_Builder" type="Node3D"]
script = ExtResource("1_18iqu")
map_size = 3000
default_map_path = "res://Assets/Levels/default_map"

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_l4oru")

[node name="Brush_Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.867
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Brush_Strength" type="Panel" parent="UI/Brush_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.16
anchor_bottom = 1.0
mouse_filter = 2

[node name="label" type="RichTextLabel" parent="UI/Brush_Panel/Brush_Strength"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -0.47998
offset_bottom = -75.64
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 38
bbcode_enabled = true
text = "[center]Brush Strength[/center]"

[node name="Slider" type="HSlider" parent="UI/Brush_Panel/Brush_Strength"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
value = 12.0

[node name="value" type="RichTextLabel" parent="UI/Brush_Panel/Brush_Strength"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.361
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.1008
offset_top = 0.179993
offset_right = -0.199982
offset_bottom = -0.640015
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 41
text = "12
"

[node name="Brush_Elevation" type="Panel" parent="UI/Brush_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.16
anchor_right = 0.321
anchor_bottom = 1.0
mouse_filter = 2

[node name="label" type="RichTextLabel" parent="UI/Brush_Panel/Brush_Elevation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -0.47998
offset_bottom = -75.64
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 39
bbcode_enabled = true
text = "[center]Elevation[/center]"

[node name="Slider" type="HSlider" parent="UI/Brush_Panel/Brush_Elevation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
value = 12.0

[node name="value" type="RichTextLabel" parent="UI/Brush_Panel/Brush_Elevation"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.361
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.1008
offset_top = 0.179993
offset_right = -0.199982
offset_bottom = -0.640015
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 41
text = "12
"

[node name="Brush_Radius" type="Panel" parent="UI/Brush_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.321
anchor_right = 0.482
anchor_bottom = 1.0
mouse_filter = 2

[node name="label" type="RichTextLabel" parent="UI/Brush_Panel/Brush_Radius"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -0.47998
offset_bottom = -75.64
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 39
bbcode_enabled = true
text = "[center]Brush_Radius[/center]"

[node name="Slider" type="HSlider" parent="UI/Brush_Panel/Brush_Radius"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
min_value = 10.0
max_value = 50.0
value = 50.0

[node name="value" type="RichTextLabel" parent="UI/Brush_Panel/Brush_Radius"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.361
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.1008
offset_top = 0.179993
offset_right = -0.199982
offset_bottom = -0.640015
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 41
text = "50
"

[node name="Brush_Falloff" type="Panel" parent="UI/Brush_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.482
anchor_right = 0.642
anchor_bottom = 1.0
mouse_filter = 2

[node name="label" type="RichTextLabel" parent="UI/Brush_Panel/Brush_Falloff"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -0.47998
offset_bottom = -75.64
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 39
bbcode_enabled = true
text = "[center]Brush Falloff[/center]"

[node name="Slider" type="HSlider" parent="UI/Brush_Panel/Brush_Falloff"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
max_value = 99.0
value = 50.0

[node name="value" type="RichTextLabel" parent="UI/Brush_Panel/Brush_Falloff"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.361
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.1008
offset_top = 0.179993
offset_right = -0.199982
offset_bottom = -0.640015
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 41
text = "50
"

[node name="World_Water_Level" type="Panel" parent="UI/Brush_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.642
anchor_right = 0.803
anchor_bottom = 1.0
mouse_filter = 2

[node name="label" type="RichTextLabel" parent="UI/Brush_Panel/World_Water_Level"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -0.47998
offset_bottom = -75.64
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 39
bbcode_enabled = true
text = "[center]Water Level[/center]"

[node name="Slider" type="HSlider" parent="UI/Brush_Panel/World_Water_Level"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
value = 12.0

[node name="value" type="RichTextLabel" parent="UI/Brush_Panel/World_Water_Level"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.361
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.1008
offset_top = 0.179993
offset_right = -0.199982
offset_bottom = -0.640015
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 41
text = "7"

[node name="editor_cursor" type="Node3D" parent="."]
script = ExtResource("2_vq7n1")

[node name="editor_cursor_display" type="Decal" parent="editor_cursor"]
transform = Transform3D(1, 0, 0, 0, 1000, 0, 0, 0, 1, 0, 0, 0)
layers = 262145
size = Vector3(300, 500, 300)
texture_albedo = SubResource("GradientTexture2D_5lyek")
upper_fade = 0.0147109
lower_fade = 318.034
cull_mask = 262146

[node name="editor_cursor_drawer" type="Decal" parent="editor_cursor"]
transform = Transform3D(1, 0, 0, 0, 1000, 0, 0, 0, 1, 0, 0, 0)
visible = false
size = Vector3(300, 500, 300)
texture_albedo = SubResource("GradientTexture2D_abga6")
upper_fade = 0.0147109
lower_fade = 318.034
cull_mask = 2

[node name="editor_environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xl1fn")

[node name="play_environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ohbwb")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(2.21801e-08, 0.200172, 0.979761, -1.29113e-07, -0.979761, 0.200172, 1, -1.3094e-07, 4.11361e-09, 0, 0, 0)
light_cull_mask = 4294967279
shadow_enabled = true
shadow_bias = 0.04
shadow_reverse_cull_face = true
shadow_blur = 2.275
directional_shadow_mode = 0

[node name="chunk" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, -5.96046e-08, 0, 1, 0, 5.96046e-08, 0, 1, 250, 7.62939e-06, 250)
layers = 2
mesh = SubResource("PlaneMesh_rgect")
skeleton = NodePath("")
script = ExtResource("3_x81um")

[node name="Water" type="MeshInstance3D" parent="chunk"]
transform = Transform3D(1, 0, 5.96046e-08, 0, 1, 0, -5.96046e-08, 0, 1, 0, 7, 0)
layers = 262144
mesh = SubResource("PlaneMesh_djt1j")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="chunk"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="chunk/StaticBody3D"]
shape = SubResource("HeightMapShape3D_87c6a")

[node name="Editor_Cam" type="Node3D" parent="."]
transform = Transform3D(0.999536, -0.0304687, 0, 0.0304687, 0.999536, 0, 0, 0, 1, 194.238, 68.3703, 116.083)
script = ExtResource("6_f37vi")

[node name="editor_preview" type="Camera3D" parent="Editor_Cam"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)
environment = SubResource("Environment_xl1fn")
fov = 37.8493

[node name="environment_prev" type="Camera3D" parent="Editor_Cam"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
visible = false
environment = SubResource("Environment_h4cl6")

[node name="visual_ground" type="Node3D" parent="."]

[node name="level" type="Node3D" parent="."]

[connection signal="mouse_entered" from="UI/Brush_Panel" to="UI" method="_mouse_entered_toolbar"]
[connection signal="mouse_exited" from="UI/Brush_Panel" to="UI" method="_mouse_exited_toolbar"]
[connection signal="value_changed" from="UI/Brush_Panel/Brush_Strength/Slider" to="UI" method="strength_slider_used"]
[connection signal="value_changed" from="UI/Brush_Panel/Brush_Elevation/Slider" to="UI" method="elevation_slider_used"]
[connection signal="value_changed" from="UI/Brush_Panel/Brush_Radius/Slider" to="UI" method="radius_slider_used"]
[connection signal="value_changed" from="UI/Brush_Panel/Brush_Falloff/Slider" to="UI" method="falloff_slider_used"]
[connection signal="value_changed" from="UI/Brush_Panel/World_Water_Level/Slider" to="UI" method="water_level_slider_used"]
